src/tui/app/snapshots/revu__tui__app__tests__zen_thread_medium.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 30)"
---

 charge.rs:-13 · 1 thread

 ▎✓ resolved
 ▎you · 2h
 ▎Why drop the plain client?
