src/tui/app/snapshots/revu__tui__app__tests__zen_thread_short.snap
---
source: src/tui/app/tests.rs
expression: screen
---

 charge.rs:-13 · 1 thread

 ▎✓ resolved
 ▎you · 2h
 ▎Why drop the plain client?
